--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,22 @@ body {
   color:rgb(20, 231, 55);
 }
 
+.recipe-ingredients {
+  background-color: white;
+  color: #22254b;
+  display: none;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.recipe:hover .recipe-ingredients{
+  display: block;
+  transform: translateY(0%);
+}
+
 .recipe-img {
   max-width: 100%;
   margin: 2px;
