--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
   padding: 0;
 }
 
+.recipe p{
+  max-width: 90%;
+  overflow: hidden;
+}
+
 .root{
   display: flex;
   flex-direction: column;
@@ -63,6 +68,7 @@ body {
 }
 
 .recipe-ingredients {
+  position: relative;
   background-color: white;
   color: #22254b;
   display: none;
@@ -74,13 +80,20 @@ body {
 }
 
 .recipe:hover .recipe-ingredients{
-  display: block;
+  max-width: 19rem;
+  max-height: 10rem;
+  top: -20rem;
+  margin-bottom: 0;
+  padding: 0;
+  overflow: scroll;
+  display: grid;
   transform: translateY(0%);
 }
 
 .recipe-img {
-  max-width: 100%;
-  margin: 2px;
+  width: 100%;
+  height: 100%;
+  
   border-radius: 1rem;
 }
 
